@@ -251,7 +251,7 @@ static int write_group(nssov_group_cbp *cbp,Entry *entry)
 				WRITE_INT32(cbp->fp,NSLCD_RESULT_BEGIN);
 				WRITE_BERVAL(cbp->fp,&names[i]);
 				WRITE_BERVAL(cbp->fp,&passwd);
-				WRITE_TYPE(cbp->fp,gid,gid_t);
+				WRITE_INT32(cbp->fp,gid);
 				/* write a list of values */
 				WRITE_INT32(cbp->fp,nummembers);
 				if (nummembers)
@@ -299,7 +299,7 @@ NSSOV_HANDLE(
 	char fbuf[1024];
 	struct berval filter = {sizeof(fbuf)};
 	filter.bv_val = fbuf;
-	READ_TYPE(fp,gid,gid_t);
+	READ_INT32(fp,gid);
 	cbp.gidnum.bv_val = cbp.buf;
 	cbp.gidnum.bv_len = snprintf(cbp.buf,sizeof(cbp.buf),"%d",gid);
 	cbp.wantmembers = 1;
